Added height conversion from cm to inch, updated no data available message when no species are available

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="language">Language :</string>
     <string name="species">Species</string>
     <string name="movies">Movies</string>
+    <string name="height_cm">%s cm</string>
+    <string name="height_inch">%s inches</string>
 </resources>
